--- a/style.css
+++ b/style.css
@@ -3,14 +3,12 @@
 body {
     background-color: #0a0a0a;
     color: #d1d1d1;
-    font-family: 'Inter', sans-serif;
+    font-family: 'VCR OSD Mono', monospace;
     text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     margin: 0;
+    padding: 0;
 }
+
 
 .container {
     max-width: 600px;
